src/snapshots/afrotd__parser__tests__rule_4.2.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 4
  - 2
  - 4
title: Im Aus am vordersten Punkt
text: "\ta) Wird ein Live Ball für im Aus erklärt, überquert aber keine Begrenzungslinie, ist er an der Stelle im Aus, an der sich seine vorderste Stelle befand, als er für dead erklärt wurde (A.R. 4.2.4.I) (Ausnahme: Regel 8.5.1.a) (A.R. 8.5.1.I).\n\tb) Vor oder gleichzeitig mit dem Verlassen des Feldes wird ein Touchdown durch den Ballträger erzielt, wenn der Ball, der sich inbounds befindet, die Fläche über der Goalline (Regel 2.12.2) durchbricht.\n\tc) Ein Receiver, der sich in der gegnerischen Endzone befindet und dort den Boden berührt, vervollständigt einen Pass, wenn er über die Seitenoder Endlinie greift und einen legalen Pass fängt.\n\td) Wird der Ball für im Aus zwischen den Goallines erklärt, ist sein vorderster Punkt der Forward Progress (A.R. 8.2.1.I und A.R. 8.5.1.VII) (Ausnahme: Wenn ein Ballträger sich in der Luft befindet, während er die Seitenlinie überquert (inklusive eines Ballträgers, der die Seitenlinie überschreitet), wird der Forward Progress durch die Position des Balles zum Zeitpunkt seiner Überquerung bestimmt (A.R. 8.2.1.II, 8.2.1.III und 8.2.1.V bis 8.2.1.IX)) Regel 5 Serie, Line to Gain"
interpretations: []
