src/snapshots/afrotd__parser__tests__rule_5.1.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 5
  - 1
  - 1
title: Zuerkennung einer Serie
text: "\ta) Dem Team, das nach einem Free Kick, Touchback, Fair Catch, dem Wechsel des Team Ballbesitzes oder als angreifendes Team in einer Extraperiode als nächstes den Ball durch einen Snap ins Spiel bringt, wird eine Serie (Regel 2.24.1) von bis zu vier aufeinander folgenden Scrimmage Downs zuerkannt.\n\tb) Team A wird eine neue Serie zuerkannt, wenn es legal auf oder jenseits der Line to Gain in Ballbesitz ist, wenn der Ball für dead erklärt wird.\n\tc) Team B wird eine neue Serie zuerkannt, wenn Team A es nach dem vierten Down versäumt hat, einen First Down zu erreichen (A.R. 10.1.5.I).\n\td) Eine neue Serie wird Team B zuerkannt, wenn Team A’s Scrimmage Kick ins Aus geht oder zur Ruhe kommt und kein Spieler versucht, ihn zu recovern (Ausnahme: Regel 8.5.1.a).\n\te) Eine neue Serie wird dem Team zuerkannt, das sich in legalem Ballbesitz befindet, wenn der Ball für dead erklärt wird und\n\t\t1. sich ein Team Ballbesitzwechsel während eines Downs ereignet;\n\t\t2. ein Scrimmage Kick die neutrale Zone überquert hat (Ausnahmen: wenn ein Down wiederholt wird und Regel 6.3.7);\n\t\t3. eine Strafe angenommen wird und dadurch dem gefoulten Team der Ballbesitz zuerkannt wird;\n\t\t4. eine Strafe angenommen wird, die einen First Down vorschreibt.\n\tf) Eine neue Serie wird Team B zuerkannt, wenn sich Team B nach einem Scrimmage Kick dafür entscheidet, den Ball am Punkt einer illegalen Berührung in Besitz zu nehmen (Ausnahme: wenn ein Down wiederholt wird) (Regeln 6.3.2.a und 6.3.2.b)."
interpretations: []
